--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.class
+classes
+target
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +12,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Idea files
+.idea
+*.iml
+
+#OS
+.DS_Store
