--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>doo.util</groupId>
-    <artifactId>util</artifactId>
+    <artifactId>dooTil</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
